--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3366 --hot"
+    "dev": "webpack-dev-server --open --port 3366 --hot --host 10.0.1.40"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
     "vue": "^2.6.10",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.4"
+    "vue-router": "^3.0.4",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
